--- a/Facilescan/app/src/main/res/layout/scan_fragment.xml
+++ b/Facilescan/app/src/main/res/layout/scan_fragment.xml
@@ -1,57 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:orientation="vertical">
 
-    <ViewFlipper
-        android:id="@+id/viewFlipper"
+<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/viewFlipper"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    >
+
+    <include layout="@layout/signin_layout" />
+
+    <LinearLayout
+        android:id="@+id/LOADING"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/loadingTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            android:text="@string/Loading" />
+
+        <ProgressBar
+            android:id="@+id/gettingScanProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/android:list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_gravity="center|center_horizontal">
+        android:background="@android:color/white"
+        android:headerDividersEnabled="false"/>
 
-        <include layout="@layout/signin_layout" />
-
-        <LinearLayout
-            android:id="@+id/LOADING"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/loadingTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="16dp"
-                android:text="@string/Loading" />
-
-            <ProgressBar
-                android:id="@+id/gettingScanProgressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/LIST"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ListView
-                android:id="@+id/android:list"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:background="@android:color/white"
-                android:headerDividersEnabled="false"/>
-
-        </LinearLayout>
-
-    </ViewFlipper>
-</LinearLayout>
+</ViewFlipper>
