--- a/Facilescan/app/src/main/res/layout/scan_fragment.xml
+++ b/Facilescan/app/src/main/res/layout/scan_fragment.xml
@@ -31,11 +31,17 @@
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/android:list"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="@android:color/white"
-        android:headerDividersEnabled="false"/>
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipeRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/android:list"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="@android:color/white"
+            android:headerDividersEnabled="false"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </ViewFlipper>
