Updated the app for the newest version of Android Studio. Passed to androidx.

--- a/Facilescan/app/src/main/res/layout/activity_base_tabs.xml
+++ b/Facilescan/app/src/main/res/layout/activity_base_tabs.xml
@@ -14,7 +14,7 @@
 
     </FrameLayout>
 
-    <android.support.design.widget.BottomNavigationView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,6 +27,6 @@
         app:labelVisibilityMode="labeled"
         app:menu="@menu/bottom_navigation_main">
 
-    </android.support.design.widget.BottomNavigationView>
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </RelativeLayout>
