--- a/Facilescan/app/src/main/res/layout/desktop_fragment.xml
+++ b/Facilescan/app/src/main/res/layout/desktop_fragment.xml
@@ -22,7 +22,7 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/navBar"
             android:layout_width="match_parent"
             android:layout_height="44dp"
@@ -96,14 +96,14 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <android.support.constraint.Guideline
+            <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintGuide_percent="0.5" />
 
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <WebView
             android:id="@+id/WEBVIEW"
