--- a/Facilescan/app/src/main/res/layout/scan_fragment.xml
+++ b/Facilescan/app/src/main/res/layout/scan_fragment.xml
@@ -31,7 +31,7 @@
 
     </LinearLayout>
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
@@ -42,6 +42,6 @@
             android:layout_height="fill_parent"
             android:background="@android:color/white"
             android:headerDividersEnabled="false"/>
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </ViewFlipper>
