Sign in layout: added a Shard textview and a info button.

--- a/Facilescan/app/src/main/res/layout/signin_layout.xml
+++ b/Facilescan/app/src/main/res/layout/signin_layout.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>    <!-- Screen with email and password buttons -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="270dp"
     android:layout_height="match_parent"
     android:layout_gravity="center|center_vertical"
@@ -15,7 +17,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/facile_icon" />
+            android:src="@drawable/facile_icon"
+            tools:ignore="contentDescription"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -45,7 +48,7 @@
         android:id="@+id/edit_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/edit_text"
         android:hint="@string/signin.passwordPlaceholder"
         android:inputType="textPassword"
@@ -53,6 +56,34 @@
         android:textColor="#000"
         android:textSize="17sp"
         android:textStyle="normal"></EditText>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp">
+
+        <TextView
+            android:id="@+id/edit_shard"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edit_text"
+            android:hint="@string/signin.shardPlaceholder"
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="60dp"
+            android:layout_height="51dp"
+            android:contentDescription="@string/signin.shardInfo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/ic_menu_help" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/signin_loginButton"
